--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -8,6 +8,7 @@ on:
       - "main"
       - "dev_wrx"
       - "google_drive"
+      - "awss3"
     tags:
       - 'v*'
 
@@ -47,7 +48,7 @@ jobs:
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         id: get-latest-tag
         with:
-          fallback: v-google-drive-test
+          fallback: v-awss3-test
 
 #      - name: Build
 #        run: cd packages/backend/;go mod tidy;export CGO_ENABLED=0;make build-backend;ls
