--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - "main"
       - "dev_wrx"
-      - "copy_space_fix"
+      - "gjm_test"
     tags:
       - 'v*'
 
@@ -47,7 +47,7 @@ jobs:
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         id: get-latest-tag
         with:
-          fallback: latest
+          fallback: gjm_test
 
 #      - name: Build
 #        run: cd packages/backend/;go mod tidy;export CGO_ENABLED=0;make build-backend;ls
