--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - "main"
       - "dev_wrx"
-      - "copy_space_fix"
+      - "nats"
     tags:
       - 'v*'
 
@@ -35,7 +35,7 @@ jobs:
 
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.18.3
+          go-version: 1.23.3
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -47,7 +47,7 @@ jobs:
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         id: get-latest-tag
         with:
-          fallback: latest
+          fallback: nats-test
 
 #      - name: Build
 #        run: cd packages/backend/;go mod tidy;export CGO_ENABLED=0;make build-backend;ls
