--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -2,14 +2,15 @@ name: Update Server
 
 on:
   workflow_dispatch:
+    inputs:
+      tags:
+        description: 'Release Tags'
 
-  push:
-    branches:
-      - "main"
-      - "dev_wrx"
-      - "nats"
-    tags:
-      - 'v*'
+#  push:
+#    branches:
+#      - "main"
+#    tags:
+#      - 'v*'
 
 jobs:
   update_server:
@@ -72,6 +73,7 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}
+          tags: beclab/files-server:${{ github.event.inputs.tags }}
+#          tags: beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}
           platforms: linux/amd64,linux/arm64
                     
