--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -7,8 +7,9 @@ on:
         description: 'Release Tags'
 
   push:
-#    branches:
-#      - "main"
+    branches:
+      - "main"
+      - "qbit"
     tags:
       - 'v*'
 
@@ -48,7 +49,7 @@ jobs:
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         id: get-latest-tag
         with:
-          fallback: latest
+          fallback: qbit-test
 
 #      - name: Build
 #        run: cd packages/backend/;go mod tidy;export CGO_ENABLED=0;make build-backend;ls
