--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches:
       - "main"
-      - "qbit"
+      - "nats"
     tags:
       - 'v*'
 
@@ -49,7 +49,7 @@ jobs:
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         id: get-latest-tag
         with:
-          fallback: qbit-test
+          fallback: nats-test
 
 #      - name: Build
 #        run: cd packages/backend/;go mod tidy;export CGO_ENABLED=0;make build-backend;ls
