--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches:
       - "main"
-      - "nats"
+      - "dev"
     tags:
       - 'v*'
 
@@ -31,6 +31,10 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+          image: tonistiigi/binfmt:qemu-v8.1.5
+          cache-image: false
+          platforms: arm64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -49,7 +53,7 @@ jobs:
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         id: get-latest-tag
         with:
-          fallback: nats-test
+          fallback: latest
 
 #      - name: Build
 #        run: cd packages/backend/;go mod tidy;export CGO_ENABLED=0;make build-backend;ls
