awss3 download localfilename

--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -11,6 +11,7 @@ on:
       - "main"
       - "dev"
       - "test"
+      - "drives"
     tags:
       - 'v*'
 
@@ -54,7 +55,7 @@ jobs:
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         id: get-latest-tag
         with:
-          fallback: chown-test3  # latest
+          fallback: awss3-test2  # latest
 
 #      - name: Build
 #        run: cd packages/backend/;go mod tidy;export CGO_ENABLED=0;make build-backend;ls
