feat: path uri relative

--- a/Dockerfile.gateway
+++ b/Dockerfile.gateway
@@ -21,9 +21,10 @@ RUN \
 	go mod download
 
 COPY cmd/gateway ./cmd/gateway
-COPY pkg/appdata ./pkg/appdata
-COPY pkg/proxy ./pkg/proxy
-COPY pkg/signals ./pkg/signals
+# COPY pkg/appdata ./pkg/appdata
+# COPY pkg/proxy ./pkg/proxy
+# COPY pkg/signals ./pkg/signals
+COPY pkg ./pkg
 
 RUN CGO_ENABLED=0 go build -o appdata-gateway cmd/gateway/main.go
 
