--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -93,6 +93,8 @@ jobs:
               hz update -idl idl/tree.thrift
               echo "upload.thrift"
               hz update -idl idl/upload.thrift
+              echo "share.thrift"
+              hz update -idl idl/share.thrift
           
               cd ../..
               go mod tidy
@@ -110,6 +112,6 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-#          tags: beclab/files-server:${{ github.event.inputs.tags }}
-          tags: beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}
+          tags: beclab/files-server:${{ github.event.inputs.tags }}
+#          tags: beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}
           platforms: linux/amd64,linux/arm64
