fix: samba share improve

--- a/config/samba/smb.conf
+++ b/config/samba/smb.conf
@@ -2,6 +2,8 @@
   server string = samba
   idmap config * : range = 3000-7999
   security = user
+  client min protocol = SMB2
+  client max protocol = SMB3
   server min protocol = SMB2
 
   # disable printing services
