--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -17,6 +17,15 @@ on:
 jobs:
   update_server:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: ${{ github.ref_type == 'tag' && fromJSON('["linux/amd64", "linux/arm64"]') || fromJSON('["linux/amd64"]') }}
+        package_arch: ${{ github.ref_type == 'tag' && fromJSON('["amd64", "arm64"]') || fromJSON('["amd64"]') }}
+        exclude:
+          - platform: linux/amd64
+            package_arch: arm64
+          - platform: linux/arm64
+            package_arch: amd64
     steps:
       - name: PR Conventional Commit Validation
         uses: ytanikin/PRConventionalCommits@1.1.0
@@ -114,6 +123,16 @@ jobs:
           context: .
           file: Dockerfile.media
           push: true
-          #          tags: beclab/files-server:${{ github.event.inputs.tags }}
-          tags: beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}
-          platforms: linux/amd64,linux/arm64
+          tags: ${{ github.ref_type == 'tag' && format('docker.io/beclab/files-server:{0}-{1}', steps.get-latest-tag.outputs.tag, matrix.package_arch) || format('docker.io/beclab/files-server:{0}', steps.get-latest-tag.outputs.tag) }}
+          platforms: ${{ matrix.platform }}
+          build-args: |
+            PACKAGE_ARCH=${{ matrix.package_arch }}
+          progress: plain
+
+      - name: Create and push manifest
+        if: github.ref_type == 'tag' && matrix.platform == 'linux/arm64'
+        run: |
+          docker buildx imagetools create \
+            --tag beclab/media-server:${{ steps.get-latest-tag.outputs.tag }} \
+            beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}-amd64 \
+            beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}-arm64
