--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -123,7 +123,7 @@ jobs:
           context: .
           file: Dockerfile.media
           push: true
-          tags: ${{ github.ref_type == 'tag' && format('docker.io/beclab/files-server:{0}-{1}', steps.get-latest-tag.outputs.tag, matrix.package_arch) || format('docker.io/beclab/files-server:{0}', steps.get-latest-tag.outputs.tag) }}
+          tags: ${{ github.ref_type == 'tag' && format('docker.io/beclab/files-server:{0}-{1}', github.event.inputs.tags || steps.get-latest-tag.outputs.tag, matrix.package_arch) || format('docker.io/beclab/files-server:{0}', steps.get-latest-tag.outputs.tag) }}
           platforms: ${{ matrix.platform }}
           build-args: |
             PACKAGE_ARCH=${{ matrix.package_arch }}
@@ -132,7 +132,8 @@ jobs:
       - name: Create and push manifest
         if: github.ref_type == 'tag' && matrix.platform == 'linux/arm64'
         run: |
+          TAG_NAME=${{ github.event.inputs.tags || steps.get-latest-tag.outputs.tag }}
           docker buildx imagetools create \
-            --tag beclab/media-server:${{ steps.get-latest-tag.outputs.tag }} \
-            beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}-amd64 \
-            beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}-arm64
+            --tag beclab/files-server:${TAG_NAME} \
+            beclab/files-server:${TAG_NME}-amd64 \
+            beclab/files-server:${TAG_NAME}-arm64
