--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -17,6 +17,15 @@ on:
 jobs:
   update_server:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: ${{ fromJSON('["linux/amd64","linux/arm64"]') }}
+        package_arch: ${{ fromJSON('["amd64","arm64"]') }}
+        exclude:
+          - platform: linux/amd64
+            package_arch: arm64
+          - platform: linux/arm64
+            package_arch: amd64
     steps:
       - name: PR Conventional Commit Validation
         uses: ytanikin/PRConventionalCommits@1.1.0
@@ -114,10 +123,9 @@ jobs:
           context: .
           file: Dockerfile.media
           push: true
-          tags: ${{ github.ref_type == 'tag' &&
-                  format('docker.io/beclab/files-server:{0}',
-                         github.event.inputs.tags || steps.get-latest-tag.outputs.tag) }}
+          tags: ${{ format('docker.io/beclab/files-server:{0}', github.event.inputs.tags || steps.get-latest-tag.outputs.tag) }}
           platforms: linux/amd64,linux/arm64
           build-args: |
-            PACKAGE_ARCH=amd64,arm64
+            PACKAGE_ARCH=${{ matrix.package_arch }}
           progress: plain
+
