--- a/Dockerfile.media
+++ b/Dockerfile.media
@@ -60,7 +60,8 @@ ARG MALI_PKG_VER
 ARG MALI_PKG_TAG
 ARG MALI_PKG_CFG
 
-ARG PACKAGE_ARCH
+ARG TARGETARCH
+ARG PACKAGE_ARCH=$TARGETARCH
 
 # Set the FFMPEG path for Jellyfin
 ENV JELLYFIN_FFMPEG="/usr/lib/jellyfin-ffmpeg/ffmpeg"
