create share path with share member

--- a/.github/workflows/update-server.yml
+++ b/.github/workflows/update-server.yml
@@ -114,6 +114,6 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          #          tags: beclab/files-server:${{ github.event.inputs.tags }}
-          tags: beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}
-          platforms: linux/amd64,linux/arm64
+          tags: beclab/files-server:${{ github.event.inputs.tags }}
+#          tags: beclab/files-server:${{ steps.get-latest-tag.outputs.tag }}
+          platforms: linux/amd64 #,linux/arm64
