fix: shared videos could not be played

--- a/.github/workflows/update-rclone.yml
+++ b/.github/workflows/update-rclone.yml
@@ -6,13 +6,13 @@ on:
       tags:
         description: "Release Tags"
 
-  push:
-    branches:
-      - "main"
-      - "dev"
-      - "test"
-    tags:
-      - "v*"
+  # push:
+  #   branches:
+  #     - "main"
+  #     - "dev"
+  #     - "test"
+  #   tags:
+  #     - "v*"
 
 jobs:
   update_server:
