--- a/.github/workflows/update-llamafactory.yml
+++ b/.github/workflows/update-llamafactory.yml
@@ -54,6 +54,6 @@ jobs:
           #tags: beclab/llamafactory:${{ github.event.inputs.tags }}
           #          tags: beclab/seahub-init:${{ steps.get-latest-tag.outputs.tag }}
           file: Dockerfile.llamafactory
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
 
 
