--- a/.github/workflows/update-llamafactory.yml
+++ b/.github/workflows/update-llamafactory.yml
@@ -50,10 +50,10 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: beclab/llamafactory:v0.0.1
+          tags: beclab/llamafactory:v0.0.2
           #tags: beclab/llamafactory:${{ github.event.inputs.tags }}
           #          tags: beclab/seahub-init:${{ steps.get-latest-tag.outputs.tag }}
           file: Dockerfile.llamafactory
-          platforms: linux/arm64
+          platforms: linux/amd64,linux/arm64
 
 
